--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
  align-items: center;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #363a34;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
