--- a/src/components/all.css
+++ b/src/components/all.css
@@ -1403,8 +1403,8 @@ font-size: 12 px;
 .qrcode {
   border: 1px solid #e2e8f0;
   border-radius: 0.25rem;
-  width: 16rem;
-  height: 16rem;
+  width: 600px;
+  height: 600px;
 }
 
 .dark .qrcode {
